objects/Product_Category_by_Account__c.object
<CustomObject>
    <description>Tracking Product Category (and Sub Category)  by Account by Show</description>
    <fields>
        <fullName>Account_Details_by_Show__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Details by Show</label>
        <referenceTo>Account_Details_by_Show__c</referenceTo>
        <relationshipLabel>Product Categories by Account</relationshipLabel>
        <relationshipName>Product_Categories_by_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Categories by Account</relationshipLabel>
        <relationshipName>Product_Categories_by_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>Product_Category__c</referenceTo>
        <relationshipLabel>Product Categories by Account</relationshipLabel>
        <relationshipName>Product_Categories_by_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Sub-Category</label>
        <referenceTo>Product_Sub_Category__c</referenceTo>
        <relationshipLabel>Product Categories by Account</relationshipLabel>
        <relationshipName>Sub_Categories_by_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Show</label>
        <referenceTo>Show__c</referenceTo>
        <relationshipLabel>Product Categories by Account</relationshipLabel>
        <relationshipName>Product_Categories_by_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Category by Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>External ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Categories by Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>